--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -2457,8 +2457,8 @@
 - book: Fully Operational
   resource: Armor
   source: Viluppo
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Fully Operational
   resource: Creatures
   source: Viluppo
@@ -2517,8 +2517,8 @@
 - book: Fully Operational
   resource: Weapons
   source: Viluppo
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Gadgets and Gear
   resource: Abilities
   source: The Outer Rim
