Update EotE Core Rulebook vehicles

--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -1518,7 +1518,7 @@
   resource: Vehicles
   source: Viluppo
   entered: Yes
-  audited: No
+  audited: Yes
 - book: Edge of the Empire Core Rulebook
   resource: Attachments
   source: Viluppo
