--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -1,4 +1,7 @@
 ---
+- date: "2020-03-17"
+  items:
+    - item: Update audited EotE Core Rulebook vehicles.
 - date: "2020-03-16"
   items:
     - item: Add Fully Operational vehicles and starships.
