--- a/src/data/changelog.yaml
+++ b/src/data/changelog.yaml
@@ -2,6 +2,7 @@
 - date: "2020-03-17"
   items:
     - item: Update audited EotE Core Rulebook vehicles.
+    - item: Add Allies and Adversaries vehicles.
 - date: "2020-03-16"
   items:
     - item: Add Fully Operational vehicles and starships.
