--- a/src/data/vehicles.yaml
+++ b/src/data/vehicles.yaml
@@ -2574,3 +2574,164 @@
   notes:
   index: 37ee73a9-01c8-440c-a734-ea52e2ff780a:253
   generatedId: cff6ea51-523a-4186-ad03-077335f4d3c5
+- category: Airspeeder
+  name: S-K2 "Skywing" Personal Speeder
+  silhouette: 2
+  speed: 3
+  handling: 2
+  armor: 0
+  htt: 3
+  sst: 3
+  defense: 0/-/-/0
+  sensors: None
+  model: S-K2 Skywing
+  manufacturer: Ubrikkian Industries
+  crew: 1
+  encumbrance: 5
+  passengers: 0
+  price: 1000
+  restricted: false
+  rarity: 4
+  hp: 0
+  weapons: 0
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:53
+  generatedId: cdf0e707-57b6-4ba9-8345-cded3a806337
+- category: Landspeeder
+  name: 88-R "Nightscreamer" Speeder Bike
+  silhouette: 2
+  speed: 4
+  handling: 1
+  armor: 1
+  htt: 3
+  sst: 4
+  defense: 0/-/-/0
+  sensors: Close
+  model: 88-R Nightscreemer
+  manufacturer: Ikas-Adno
+  crew: 1
+  encumbrance: 5
+  passengers: 1
+  price: 5500
+  restricted: false
+  rarity: 6
+  hp: 2
+  weapons: 1
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:53
+  generatedId: 93985f8d-819b-482c-8268-6460104031bb
+- category: Landspeeder
+  name: RX-200 "Falchion" Ion Tank
+  silhouette: 3
+  speed: 3
+  handling: 0
+  armor: 2
+  htt: 30
+  sst: 25
+  defense: 2/-/-/1
+  sensors: Long
+  model: RX-200 Falchion
+  manufacturer: Rothana Heavy Engineering
+  crew: 3
+  encumbrance: 25
+  passengers: 2
+  price: 75000
+  restricted: true
+  rarity: 6
+  hp: 2
+  weapons: 3
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:53
+  generatedId: 7d5047f0-3f64-4355-8ef0-00114229a14c
+- category: Landspeeder
+  name: TX-130 Saber-class Fighter Tank
+  silhouette: 3
+  speed: 4
+  handling: 1
+  armor: 2
+  htt: 20
+  sst: 17
+  defense: 1/-/-/1
+  sensors: Medium
+  model: TX-130 Saber-class
+  manufacturer: Rothana Heavy Engineering
+  crew: 5
+  encumbrance: 20
+  passengers: 2
+  price: 85000
+  restricted: true
+  rarity: 6
+  hp: 2
+  weapons: 3
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:54
+  generatedId: 1d18a94b-2273-4737-94fa-293679f1c47d
+- category: Landspeeder
+  name: SCS-19 "Sentinel" Armored Landspeeder
+  silhouette: 3
+  speed: 3
+  handling: -1
+  armor: 3
+  htt: 8
+  sst: 8
+  defense: 0/-/-/0
+  sensors: Short
+  model: SCS-19 Sentinel
+  manufacturer: TaggeCo
+  crew: 1
+  encumbrance: 15
+  passengers: 4
+  price: 60000
+  restricted: false
+  rarity: 6
+  hp: 2
+  weapons: 1
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:54
+  generatedId: 3c63d0b8-d7e0-4407-ad71-0928c10b223b
+- category: Landspeeder
+  name: RTT-04 Armored Troop Transport
+  silhouette: 3
+  speed: 3
+  handling: 0
+  armor: 2
+  htt: 18
+  sst: 14
+  defense: 0/-/-/0
+  sensors: Short
+  model: RTT-04
+  manufacturer: Rothana Heavy Engineering
+  crew: 2
+  encumbrance: 85
+  passengers: 12
+  price: 42000
+  restricted: false
+  rarity: 5
+  hp: 2
+  weapons: 2
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:55
+  generatedId: ba726835-1460-414a-b5d1-3f057925707a
+- category: Walker
+  name: All Terrain Attack Pod
+  silhouette: 3
+  speed: 2
+  handling: 0
+  armor: 2
+  htt: 15
+  sst: 10
+  defense: 0/-/-/0
+  sensors: Medium
+  model: AT-AP
+  manufacturer: Kuat Drive Yards
+  crew: 3
+  encumbrance: 12
+  passengers: 0
+  price: 100000
+  restricted: true
+  rarity: 6
+  hp: 2
+  weapons: 3
+  notes:
+  index: c71146fe-f76b-4f0b-823f-c899c86d451f:55
+  generatedId: 99d0343c-16e1-4905-9a7d-db3276b4a657
